docs: overhaul documentation, modernize API guides, and add cookbooks
- Populate chapter landing hubs (Getting Started, Entity Framework, Control Entities, UI)
- Add dedicated Camera & Viewport guide, 2D Spatial Sound guide, and HUD/UI Cookbook
- Add Top-Down Shooter tutorial, Particle System recipes, and modernize Savegames guide
- Deduplicate and clean up SUMMARY.md navigation tree
- Standardize YAML frontmatter across all content pages and tag all code fences
- Add GitHub Actions CI documentation lint workflow